--- a/1Biriyani.html
+++ b/1Biriyani.html
@@ -48,7 +48,7 @@
                 <div class="mt-4">
                     <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">BIRIYANI</h3>
                     <h2 class="text-gray-900 title-font text-lg font-medium">VEG-BIRIYANI</h2>
-                    <p class="mt-1">$80.15</p>
+                    <p class="mt-1">₹80.00</p>
                 </div>
             </div>
             <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
